--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,17 @@
     <!-- Base application theme. -->
     <style name="Theme.ApresentacaoLayout" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- textos. -->
-        <item name="android:textViewStyle">"@style/textoStyle</item>
-        <item name="android:editTextStyle">@style/editextStyle</item>
-        <item name="android:colorBackground">@drawable/fotofundo</item>
+        <item name="colorPrimary">#4E0339</item>
+        <item name="colorSecondary">@color/purple_500</item>
+        <item name="android:colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/Objetos</item>
+        <!-- textos estilos. -->
+        <item name="android:textViewStyle">@style/textoStyleClaro</item>
+        <item name="android:windowBackground">@drawable/fundclaro</item>
+        <item name="android:editTextColor">@color/black</item>
 
     </style>
+
 
 
 </resources>
