--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="95dp"
         android:text="Lista de Tarefas"
+        android:textColor="#C32525"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
